--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.9.3",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "firebase": "^10.0.0",
     "install": "^0.13.0",
+    "js-cookie": "^3.0.5",
+    "js-cookies": "^1.0.4",
     "mdb-react-ui-kit": "^6.1.0",
     "npm": "^9.7.1",
     "react": "^18.2.0",
