--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "firebase": "^10.0.0",
+    "formik": "^2.4.5",
     "install": "^0.13.0",
     "js-cookie": "^3.0.5",
     "js-cookies": "^1.0.4",
@@ -28,7 +29,8 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
