--- a/package.json
+++ b/package.json
@@ -3,29 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@floating-ui/react-dom": "^2.0.8",
+    "@ant-design/icons": "^5.3.5",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mui/material": "^5.15.10",
-    "@mui/styled-engine": "^5.15.9",
+    "@reduxjs/toolkit": "^2.2.2",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
     "antd": "^5.10.3",
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
-    "firebase": "^10.5.2",
+    "eslint-config-react-app": "^7.0.1",
     "formik": "^2.4.5",
-    "install": "^0.13.0",
+    "jquery": "^3.7.1",
     "js-cookie": "^3.0.5",
-    "js-cookies": "^1.0.4",
     "mdb-react-ui-kit": "^6.3.0",
-    "npm": "^10.2.1",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
-    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-modal": "^3.16.1",
@@ -34,7 +30,6 @@
     "react-select": "^5.7.7",
     "react-toastify": "^9.1.3",
     "web-vitals": "^3.5.0",
-    "xlsx": "^0.18.5",
     "yup": "^1.3.2"
   },
   "scripts": {
@@ -60,5 +55,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "depcheck": "^1.4.7",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
+    "react-unused-components": "^1.0.1"
   }
 }
